fix More contrast for hamburger button

--- a/themes/quasar/source/css/_elements.styl
+++ b/themes/quasar/source/css/_elements.styl
@@ -177,6 +177,12 @@ input, select, textarea
   &.inverted:active
     background-color $inverted-secondary-text
 
+  &.fixed
+    color $primary
+
+    &:hover
+      color $inverted-secondary-text
+
 .qwb-btn-group
   display flex
   flex-direction row
